FIX ( Form to create new project ) : fix padding measure unit to apply styles and prevent overflow content hidden

--- a/components/common/formNewItem/formNewItem.module.css
+++ b/components/common/formNewItem/formNewItem.module.css
@@ -38,7 +38,7 @@
   padding-top: 10px;
   height: calc(95vh - 76px);
   overflow: auto;
-  padding-bottom: 150;
+  padding-bottom: 150px;
 }
 
 .titleContainer
